# typewriter

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/textedit/: gutter.h  syntaxhighlighter.h  textblock.h  textcursor.h  textdiff.h  textdocument.h  textedit.h  texteditor.h  textfold.h  textformat.h  textview.h
include/textedit/private/: gutter_p.h  syntaxhighlighter_p.h  textblock_p.h  textcursor_p.h  textdocument_p.h  texteditor_p.h  textview_p.h
include/textedit/utils/: range.h
include/textedit/view/: block.h  extraselection.h  formatrange.h  fragment.h  incrusted-widget.h  line.h  lineelement.h  metrics.h
include/typewriter/: contributor.h  documentindexer.h  stringview.h  syntaxhighlighter.h  textblock.h  textcursor.h  textdiff.h  textdocument.h  texteditor.h  textfold.h  textview.h  typewriter-defs.h
include/typewriter/private/: textblock_p.h  textcursor_p.h  textdocument_p.h  texteditor_p.h  textview_p.h
include/typewriter/utils/: range.h
include/typewriter/view/: block.h  formatrange.h  fragment.h  inserts.h  line.h
qt/: CMakeLists.txt
qt/include/typewriter/qt/: codeeditor-item.h  codeeditor-qt-common.h  codeeditor-qt-defs.h  codeeditor-widget.h
qt/src/: codeeditor-qt-common.cpp
qt/src/qml/: codeeditor-item.cpp
qt/src/widget/: codeeditor-widget.cpp
src/: contributor.cpp  gutter.cpp  range.cpp  syntaxhighlighter.cpp  textblock.cpp  textcursor.cpp  textdiff.cpp  textdocument.cpp  textedit.cpp  texteditor.cpp  textfold.cpp  textformat.cpp  textview.cpp
tests/: CMakeLists.txt  main.cpp  tests.cpp  tests.h  tests_contributor.cpp  tests_document.cpp  tests_view.cpp
widget/: CMakeLists.txt  codeeditor.cpp  codeeditor.h
